--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,6 +6,9 @@
         "@components/*":["./src/components/*"],
         "@assets/*": ["./src/assets/*"],
         "@icons/*": ["./src/assets/icons/*"],
+        "@api/*": ["./src/api/*"],
+        "@utils/*":["./src/utils"],
+        "@hooks/*":["./src/hooks/*"],
       }
     }
   }
