--- a/jsconfig.json
+++ b/jsconfig.json
@@ -9,6 +9,7 @@
         "@api/*": ["./src/api/*"],
         "@utils/*":["./src/utils"],
         "@hooks/*":["./src/hooks/*"],
+        "@context/*":["./src/context/*"],
       }
     }
   }
