--- a/jsconfig.json
+++ b/jsconfig.json
@@ -10,6 +10,8 @@
         "@utils/*":["./src/utils"],
         "@hooks/*":["./src/hooks/*"],
         "@context/*":["./src/context/*"],
+        "@reducers/*":["./src/reducers/*"],
+        "@actions/*":["./src/actions/*"],
       }
     }
   }
