--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,7 +7,7 @@
         "@assets/*": ["./src/assets/*"],
         "@icons/*": ["./src/assets/icons/*"],
         "@api/*": ["./src/api/*"],
-        "@utils/*":["./src/utils"],
+        "@utils/*":["./src/utils/*"],
         "@hooks/*":["./src/hooks/*"],
         "@context/*":["./src/context/*"],
         "@reducers/*":["./src/reducers/*"],
