Feat: added loader import path

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -12,6 +12,7 @@
         "@context/*":["./src/context/*"],
         "@reducers/*":["./src/reducers/*"],
         "@actions/*":["./src/actions/*"],
+        "@loaders/*":["./src/loaders/*"],
       }
     }
   }
